tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax09/Test.java


public class Test {
	
	public interface TestInterface {
		public void functInterface(int a);
	}
	
	public static void main(String[] args) {
		TestInterface t = _ -> { };
    }
	
	
}